--- a/css/style.css
+++ b/css/style.css
@@ -258,25 +258,33 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modalbut {
-  display: flex;
+  display: inline-block;
   position: absolute;
-  right: 8px;
   top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(../img/x.svg);
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
+  cursor: pointer;
 }
+.modalbut:hover,
+.modalbut:active {
+  fill: #188ce8;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form {
   width: 528px;
   height: 581px;
-  margin: 40px;
+  padding: 40px;
 }
 .form-group {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
@@ -300,6 +308,25 @@ ul {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  padding-left: 35px;
+}
+.form-group input:focus {
+  border: 1px solid var(--active-color);
+  outline: 0px;
+  transition: 250ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon {
+  position: absolute;
+  display: inline-block;
+  top: 47%;
+  left: 15px;
+}
+.form-input:focus ~ .modal-icon {
+  fill: var(--active-color);
+
+  transition: 250ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-group label {
   font-style: normal;
@@ -318,7 +345,13 @@ ul {
   padding: 12px 16px;
   resize: none;
 }
+.form-group textarea:focus {
+  border: 1px solid var(--active-color);
+  outline: 0px;
 
+  transition: 250ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .form-group ::placeholder {
   font-style: normal;
   font-weight: normal;
@@ -332,14 +365,13 @@ ul {
   margin-bottom: 20px;
 }
 .form-policy {
+  text-align: center;
+  width: 100%;
   padding-bottom: 30px;
 }
-.form-policy input [type='checkbox'] {
-  width: 16px;
-  height: 15px;
-  background: #212121;
-}
+
 .form-policy label {
+  align-items: center;
   text-align: center;
   font-style: normal;
   font-weight: normal;
@@ -347,26 +379,46 @@ ul {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--text-color);
-  padding-left: 7px;
+
+  cursor: pointer;
 }
 .form-policy a {
   color: var(--active-color);
   text-decoration: underline;
 }
-
-.buttonform {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+.checkbox {
+  width: 16px;
+  height: 15px;
+  appearance: none;
+  background-image: url(../img/border.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  outline: 0px;
+  cursor: pointer;
 }
+
+.checkbox:checked {
+  background: #2196f3;
+  background-image: url(../img/element.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 3px;
+  outline: 0px;
+}
+.buttonform {
+  text-align: center;
+  width: 100%;
+}
+
 .formbutt {
   width: 200px;
   height: 50px;
   background: #188ce8;
-  border-radius: 4px;
   color: var(--pbutton-color);
   border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
 }
 /* quality */
 .quality {
@@ -719,6 +771,7 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
+  cursor: pointer;
 
   font-style: normal;
   font-weight: bold;
@@ -726,6 +779,12 @@ ul {
   line-height: 30px;
   letter-spacing: 0.06em;
   color: var(--hero-color);
+}
+.followbutt:hover,
+.followbutt:active {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .followmedia {
   margin-left: 10px;
