--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,7 @@ ul {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+  color: var(--text-color);
 }
 .followbutt {
   display: flex;
@@ -766,7 +767,7 @@ ul {
   align-items: center;
   width: 200px;
   height: 50px;
-  background: #2196f3;
+  background-color: #2196f3;
   background-repeat: no-repeat;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
